# cd_game_engine

./: CMakeLists.txt  README.md  camera.hpp  enigma.frag  glad.c  grid.frag  grid.vert  hud.frag  main.cpp  mesh.hpp  model.hpp  planet.frag  planet.vert  shader.cpp  shader.frag  shader.hpp  shader.vert  sky.frag
include/glad/: glad.h
model_files/ue4-storm-trooper-rigged-game-ready/source/: Walking.fbx
model_files/wskrs-the-eyes-and-ears-of-seaquest/source/: WSKRS.fbx
